--- a/spa-infrastructure/api/Dockerfile
+++ b/spa-infrastructure/api/Dockerfile
@@ -1,29 +1,26 @@
-FROM golang:1.21.3 AS builder
+FROM golang:1.21.3
 
-RUN apt-get update && apt-get install -y default-mysql-client
+RUN apt-get update && apt-get install -y default-mysql-client && apt-get install -y postgresql-client
 
 WORKDIR /app
 
 COPY go.mod ./
 COPY go.sum ./
 
+WORKDIR /app
 RUN go mod download
 
-COPY . .
-
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o main ./main.go
-
-FROM alpine:3.18 AS production
-
-RUN apk add --no-cache mysql-client
+RUN go install github.com/cosmtrek/air@v1.29.0
 
 WORKDIR /app
 
-COPY --from=builder /app/main .
+COPY . .
 
 COPY entrypoint.sh /usr/local/bin/
+
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
 ENTRYPOINT ["entrypoint.sh"]
 
-CMD ["/app/main"]
+WORKDIR /app
+CMD ["air", "-c", ".air.toml"]
