--- a/gke-infrastructure/shared-mysql.yaml
+++ b/gke-infrastructure/shared-mysql.yaml
@@ -48,3 +48,16 @@ spec:
       resources:
         requests:
           storage: 5Gi
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mysql-service
+spec:
+  selector:
+    app: mysql
+  ports:
+    - protocol: TCP
+      port: 3306
+      targetPort: 3306
+  type: ClusterIP
